--- a/.github/workflows/surge-script.yml
+++ b/.github/workflows/surge-script.yml
@@ -1,9 +1,9 @@
 name: Surge Configuration - Script
 
 on:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
   workflow_dispatch:
   schedule:
     - cron: "0 23 * * *"
