--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -1,5 +1,5 @@
-SURGE_PROVIDER: "https://example.com/subscribe/key?protocols=smart&list=surge"
-CLASH_PROVIDER: "https://example.com/subscribe/key?protocols=smart&list=clash"
+SURGE_PROVIDER: "https://example.com/subscribe/<key>?protocols=smart&list=surge"
+# CLASH_PROVIDER: "https://example.com/subscribe/<key>?protocols=smart&list=clash"
 
-SURGE_OUTPUT: "./output/surge.conf"
-CLASH_OUTPUT: "./output/clash.conf"
+SURGE_OUTPUT: "/Users/<username>/Library/Mobile Documents/iCloud~com~nssurge~inc/Documents/profile-name.conf"
+# CLASH_OUTPUT: "<path>/config.conf"
