add: rule for clubhouse

--- a/surge/2.rule.conf
+++ b/surge/2.rule.conf
@@ -48,6 +48,9 @@ RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/media/Pornhu
 RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/media/Soundcloud.list,GlobalTV
 RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/media/ViuTV.list,GlobalTV
 
+DOMAIN-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@jt/surge/domain-set/Clubhouse.txt,Clubhouse
+DOMAIN-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@jt/surge/domain-set/Agora.txt,Agora
+
 RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/Telegram.list,Telegram
 
 RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/Steam.list,Steam
