add rules: crypto, discord

--- a/surge/2.rule.conf
+++ b/surge/2.rule.conf
@@ -52,6 +52,8 @@ DOMAIN-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@jt/surge/domain-set/Clubhous
 DOMAIN-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@jt/surge/domain-set/Agora.txt,Agora
 
 RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/Telegram.list,Telegram
+RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/Crypto.list,Crypto
+RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/Discord.list,Discord
 
 RULE-SET,https://cdn.jsdelivr.net/gh/web3jt/rules@di/surge/provider/Steam.list,Steam
 
