--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,9 +8,9 @@ updates:
     time: '00:00'
   open-pull-requests-limit: 10
   reviewers:
-    - HyperDeFiLab
+    - web3jt
   assignees:
-    - HyperDeFiLab
+    - web3jt
   commit-message:
     prefix: fix
     prefix-development: chore
@@ -23,9 +23,9 @@ updates:
     time: '00:00'
   open-pull-requests-limit: 10
   reviewers:
-    - HyperDeFiLab
+    - web3jt
   assignees:
-    - HyperDeFiLab
+    - web3jt
   commit-message:
     prefix: fix
     prefix-development: chore
