--- a/clash/provider/Special.yaml
+++ b/clash/provider/Special.yaml
@@ -87,6 +87,9 @@ payload:
 
   # > UUBooster
   - PROCESS-NAME,UUBooster
+  
+  # > WiFiman
+  - DOMAIN-SUFFIX,app-measurement.com
 
   # > Xunlei
   # - USER-AGENT,%E8%BF%85%E9%9B%B7
@@ -120,6 +123,7 @@ payload:
   - DOMAIN-SUFFIX,broadcasthe.net
   - DOMAIN-SUFFIX,chdbits.co
   - DOMAIN-SUFFIX,classix-unlimited.co.uk
+  - DOMAIN-SUFFIX,dmhy.best
   - DOMAIN-SUFFIX,empornium.me
   - DOMAIN-SUFFIX,gazellegames.net
   - DOMAIN-SUFFIX,hdchina.org
