--- a/clash/provider/OpenAI.yaml
+++ b/clash/provider/OpenAI.yaml
@@ -23,5 +23,5 @@ payload:
   - DOMAIN-SUFFIX,anthropic.com
   - DOMAIN-SUFFIX,claude.ai
 
-  # > Bard
-  - DOMAIN,bard.google.com
+  # > Gemini
+  - DOMAIN-SUFFIX,gemini.google.com
