--- a/clash/provider/OpenAI.yaml
+++ b/clash/provider/OpenAI.yaml
@@ -24,6 +24,7 @@ payload:
   # > Copilot
   - DOMAIN-SUFFIX,bing.com
   - DOMAIN-SUFFIX,bingapis.com
+  - DOMAIN,copilot.microsoft.com
 
   # > Gemini
   - DOMAIN-SUFFIX,gemini.google.com
